--- a/Vue3TutorialProject/assets/styles.css
+++ b/Vue3TutorialProject/assets/styles.css
@@ -164,6 +164,12 @@ textarea {
 ul {
   list-style-type: none;
 }
+.github {
+  width: 50px;
+  height: 50px;
+  padding: 0;
+  margin: 0;
+}
 
 @media only screen and (max-width: 600px) {
   .container {
